clusters/app.ci/repo-brancher-controller/repo-brancher-controller.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: repo-brancher-controller
  name: repo-brancher-controller
  namespace: ci
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  - name: metrics
    port: 9090
    protocol: TCP
    targetPort: metrics
  selector:
    app: repo-brancher-controller
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app: repo-brancher-controller
  name: repo-brancher-controller
  namespace: ci
spec:
  ingress:
  - from:
    - podSelector:
        matchExpressions:
        - key: component
          operator: In
          values:
          - hook
          - hook-apps
        matchLabels:
          app: prow
    ports:
    - port: http
      protocol: TCP
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: openshift-user-workload-monitoring
    ports:
    - port: metrics
      protocol: TCP
  podSelector:
    matchLabels:
      app: repo-brancher-controller
  policyTypes:
  - Ingress
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    keel.sh/matchTag: "true"
    keel.sh/policy: force
    keel.sh/pollSchedule: "@every 5m"
    keel.sh/trigger: poll
  labels:
    app: repo-brancher-controller
  name: repo-brancher-controller
  namespace: ci
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: repo-brancher-controller
  template:
    metadata:
      annotations:
        ci-workload-autoscaler.openshift.io/scale: "false"
      labels:
        app: repo-brancher-controller
    spec:
      containers:
      - args:
        - --repo=https://github.com/openshift/release.git
        - --ref=main
        - --period=30s
        - --root=/tmp/git-sync
        - --max-failures=3
        - --link=release
        command:
        - /git-sync
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_git-sync_v4.3.0
        imagePullPolicy: Always
        name: git-sync
        resources:
          requests:
            cpu: 10m
            memory: 100Mi
          limits:
            cpu: 500m
            memory: 1Gi
        volumeMounts:
        - mountPath: /tmp/git-sync
          name: release
      - args:
        - --config-dir=/var/repo/release/ci-operator/config
        - --forwarding-config=/etc/repo-brancher-controller/config.yaml
        - --plugin-config-dir=/var/repo/release/core-services/prow/02_config
        - --github-token-path=/etc/github/oauth
        - --github-endpoint=http://ghproxy
        - --github-endpoint=https://api.github.com
        - --github-graphql-endpoint=http://ghproxy/graphql
        - --hmac-secret-file=/etc/webhook/hmac.yaml
        - --slack-token-path=/etc/slack/oauth_token
        - --ops-channel-id=CHY2E1BL4
        - --endpoint=/
        - --port=8888
        command:
        - repo-brancher-controller
        image: quay-proxy.ci.openshift.org/openshift/ci:ci_repo-brancher-controller_latest
        imagePullPolicy: Always
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 20
          periodSeconds: 10
        name: repo-brancher-controller
        ports:
        - containerPort: 8888
          name: http
        - containerPort: 9090
          name: metrics
        readinessProbe:
          httpGet:
            path: /healthz/ready
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 5
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 200m
            memory: 512Mi
        volumeMounts:
        - mountPath: /var/repo
          name: release
          readOnly: true
        - mountPath: /etc/github
          name: oauth
          readOnly: true
        - mountPath: /etc/webhook
          name: hmac
          readOnly: true
        - mountPath: /etc/slack
          name: slack
          readOnly: true
        - mountPath: /etc/repo-brancher-controller
          name: config
          readOnly: true
      volumes:
      - emptyDir: {}
        name: release
      - name: oauth
        secret:
          secretName: github-credentials-openshift-merge-robot
      - name: hmac
        secret:
          secretName: github-webhook-credentials
      - name: slack
        secret:
          secretName: slack-credentials-dptp-bot
      - configMap:
          name: repo-brancher-controller
        name: config
